--- a/mononofu/takekimono/templates/top.html
+++ b/mononofu/takekimono/templates/top.html
@@ -10,9 +10,11 @@
 
 <body>
 たちつてと
+    <div>これは相当エロすぎると思うのです</div>
     <img src="https://img.sirabee.com/wp-content/uploads/2020/02/sirabee20200226furukawayui2-600x400.jpg" alt="">
     <div class="force">あいくぬわら</div>
 	あああああ
+
 
 </body>
 
